--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
 
 	<header class="header-main" style="background-image: url('{{ site.baseurl }}/assets/images/longhair.png')">
 		<div class="overlay-light"></div>
+		{% include nav.html %}
 		<div class="home-title">
 			<h1>{{ site.title }}</h1>
 			<h3>Developer</h3>
@@ -13,8 +14,5 @@ layout: default
 
 		<a href="#blurb" class="home-avatar"></a>
 	</header>
-
-
-	
 	
 </body>
