--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@ layout: default
 
 		<a href="#blurb" class="home-avatar"></a>
 	</header>
+
+	<!-- About me -->
+	<!-- Change 'who-is-he' class name -->
+	<div class="who-is-he" id="blurb">
+		<h2>Who am I?</h2>
+		<p>Something witty will be written here. Please be patient. <a href="{{ site.url }}/blog">&#x2600</a> If you want to contact me, please submit your <a href="#newsletter">email</a> and I'll get back to you. Also follow me on <a href="{{ site.instagram_path }}" target="_blank">Instagram</a>!
+		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos iste aut doloribus ipsum, autem ratione alias, ab molestias veritatis quo neque praesentium, temporibus dicta excepturi, numquam sit ullam a eaque.
+		</p>
+	</div>
 	
 </body>
