--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <body>
 
-	<header class="header-main" style="background-image: url('{{ site.baseurl }}/assets/images/longhair.png')">
+	<header class="header-main" style="background-image: url('{{ site.baseurl }}/assets/images/mountain.jpg')">
 		<div class="overlay-light"></div>
 		{% include nav.html %}
 		<div class="home-title">
