--- a/index.html
+++ b/index.html
@@ -23,5 +23,41 @@ layout: default
 		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos iste aut doloribus ipsum, autem ratione alias, ab molestias veritatis quo neque praesentium, temporibus dicta excepturi, numquam sit ullam a eaque.
 		</p>
 	</div>
-	
+
+	<hr>
+
+	<!-- Stuff -->
+
+	<h2 class="education">Education</h2>
+	<div class="edu-content-wrapper">
+		<div class="edu-wrap">
+			<div class="edu">
+				<div class="edu-img edu-img-one"></div>
+					<a href="" target="_blank" class="edu-text">
+						<h4>Arizona State University</h4>
+						<p>
+							Bachelor of Science in Information Technology
+							<br>
+							GPA: 3.88
+						</p>
+					</a>
+			</div>
+		</div>
+
+		<div class="edu-wrap edu-wrap-reverse">
+			<div class="edu">
+				<div class="edu-img edu-img-two"></div>
+					<a href="" target="_blank" class="edu-text">
+						<h4>Arizona State University</h4>
+						<p>							
+							Master of Science Information Technology 
+							<br>
+							Graduation Date: Dec 2018
+						</p>
+					</a>
+			</div>
+		</div>
+	</div>
+
+
 </body>
