--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 
 	<hr>
 
-	<!-- Stuff -->
+	<!-- EDU Stuff -->
 
 	<h2 class="education">Education</h2>
 	<div class="edu-content-wrapper">
@@ -59,5 +59,23 @@ layout: default
 		</div>
 	</div>
 
+<!-- Pro Stuff -->
+
+	<h2 class="experience">Professional Experience</h2>
+	<div class="exp-content-wrapper">
+		<div class="exp-wrap">
+			<div class="exp">
+				<div class="exp-img exp-img-one"></div>
+					<a href="" target="_blank" class="exp-text">
+						<h4>Company XYZ</h4>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut aperiam ipsa, numquam! Ex molestias eaque ut vitae praesentium et in deleniti. Cum, cumque amet esse odio magnam impedit harum doloribus?
+						</p>
+					</a>
+			</div>
+		</div>
+	</div>
+	
+	<hr>
 
 </body>
