--- a/_posts/2018-07-09-Test-Blog.html
+++ b/_posts/2018-07-09-Test-Blog.html
@@ -1,8 +1,30 @@
 ---
 layout: post
 title: "First Post"
-categories: blog
+categories: first
 feature-image: 2018-07-09-gate2.jpg
-excerpt: ""
+excerpt: "Yesterday it worked."
 author: vincentli
 ---
+
+<p class="dropcap">
+	Yesterday it worked. 
+	Today it is not working. 
+	Windows is like that. 
+</p>
+
+<img src="{{ site.baseurl }}{{ site.path_to_blog_img }}error-code.jpg" alt="random img">
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos est, dignissimos itaque ipsa voluptatem in eligendi corrupti eum, obcaecati dolore quisquam, deleniti a quo! Sint suscipit cupiditate fugit ab laudantium.</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et natus libero quae, voluptatibus explicabo veniam inventore magnam rerum porro provident molestiae animi minima earum enim soluta, nobis fuga quas. Natus.</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente incidunt recusandae necessitatibus quibusdam, beatae, iste eaque repellendus tempora ex velit fugiat, culpa. Voluptates hic magni nesciunt praesentium, maiores sapiente nisi.</p>
+
+<a href="" target="_blank" class="lg-block-quote">	
+	Yesterday it worked. 
+	Today it is not working. 
+	Windows is like that. 
+</a>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolore libero nesciunt perferendis facilis! Delectus maxime nihil totam, neque quis excepturi quod laudantium nostrum sequi consequuntur accusamus molestias fuga sint.</p>
