need to finish front page

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ layout: default
 			<div class="edu">
 				<div class="edu-img edu-img-one"></div>
 					<a href="" target="_blank" class="edu-text">
-						<h4>Arizona State University</h4>
+						<h4>Bachelor of Science in Information Technology</h4>
 						<p>
-							Bachelor of Science in Information Technology
+							Arizona State University
 							<br>
 							GPA: 3.88
 						</p>
@@ -46,11 +46,11 @@ layout: default
 
 		<div class="edu-wrap edu-wrap-reverse">
 			<div class="edu">
-				<div class="edu-img edu-img-two"></div>
+				<div class="edu-img edu-img-one"></div>
 					<a href="" target="_blank" class="edu-text">
-						<h4>Arizona State University</h4>
+						<h4>Master of Science Information Technology </h4>
 						<p>							
-							Master of Science Information Technology 
+							Arizona State University
 							<br>
 							Graduation Date: Dec 2018
 						</p>
@@ -67,10 +67,15 @@ layout: default
 			<div class="exp">
 				<div class="exp-img exp-img-one"></div>
 					<a href="" target="_blank" class="exp-text">
-						<h4>Company XYZ</h4>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut aperiam ipsa, numquam! Ex molestias eaque ut vitae praesentium et in deleniti. Cum, cumque amet esse odio magnam impedit harum doloribus?
-						</p>
+						<h4>ASU Engineering Technical Services</h4>
+						<ul>
+							<li>Program packaging and SCCM configuration for outgoing program campus wide</li>
+							<li>Create Ubuntu/RedHat Server templates with consideration to ISO security policy</li>
+							<li>Obtaining familiarity with VM workstation as a software testing environment prior to deployment</li>
+							<li>Create customer report for administration through SCCM to find old/lost machine in the system</li>
+							<li>Implement test installation code in sandbox development area using virtualized environments</li>
+							<li>Recommend possible Mobile device management solutions with detailed outcomes and expected costs</li>
+						</ul>
 					</a>
 			</div>
 		</div>
