trying to add resume

--- a/index.html
+++ b/index.html
@@ -61,24 +61,22 @@ layout: default
 
 <!-- Pro Stuff -->
 
-	<h2 class="experience">Professional Experience</h2>
+	<h2 class="experience">Experience</h2>
 	<div class="exp-content-wrapper">
 		<div class="exp-wrap">
+<!-- Put this in a nice box -->
 			<div class="exp">
-				<div class="exp-img exp-img-one"></div>
-					<a href="" target="_blank" class="exp-text">
-						<h4>ASU Engineering Technical Services</h4>
-						<ul>
-							<li>Program packaging and SCCM configuration for outgoing program campus wide</li>
-							<li>Create Ubuntu/RedHat Server templates with consideration to ISO security policy</li>
-							<li>Obtaining familiarity with VM workstation as a software testing environment prior to deployment</li>
-							<li>Create customer report for administration through SCCM to find old/lost machine in the system</li>
-							<li>Implement test installation code in sandbox development area using virtualized environments</li>
-							<li>Recommend possible Mobile device management solutions with detailed outcomes and expected costs</li>
-						</ul>
-					</a>
-			</div>
+				<div class="exp-img"></div>
+					<h4>
+						<i class="pdf-icon"></i><a href="/assets/pdf/resume.pdf" target="_blank" class="featured-resume"download>Download my Resume</a>
+					</h4>
+				</div>
+					<p>Click above to check out my resume!</p>
 		</div>
+<!-- exp has been converted to an _include; find info there -->
+		</div>
+	</div>
+
 	</div>
 	
 	<hr>
