--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ layout: default
 	<!-- About me -->
 	<!-- Change 'who-is-he' class name -->
 	<div class="who-is-he" id="blurb">
-		<h2>Who am I?</h2>
-		<p>Something witty will be written here. Please be patient. <a href="{{ site.url }}/blog">&#x2600</a> If you want to contact me, please submit your <a href="#newsletter">email</a> and I'll get back to you. Also follow me on <a href="{{ site.instagram_path }}" target="_blank">Instagram</a>!
-		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos iste aut doloribus ipsum, autem ratione alias, ab molestias veritatis quo neque praesentium, temporibus dicta excepturi, numquam sit ullam a eaque.
+		<h2>Who?</h2>
+
+		<p>I have over three years of experience working under multiple technology groups in Arizona State University while obtaining a Bachelor of Science in Information Technology. I graduated in December 2017 achieving Summa Cum Laude and I am currently due to finish my Master of Science in Information Technology this December. During my tenure at ASU I’ve worked through the multiple tiers of technology support from help desk to internship. I’ve worked on assisting customers to install necessary software to modifying hardware to install in classrooms. I’m excited to be graduating from ASU with skills that can transfer to the work force. 
+		<br>Competencies include: Python, SQL, Networking, Network Security, Technical Writing
 		</p>
 	</div>
 
